# memorize_app

./: .gitignore  README.md  hello.py  pyproject.toml  study_notes_all_incorrect_2025-03-13.md  study_notes_all_incorrect_2025-03-14.md
scripts/: add_data_by_manual.py  add_question.py  answer.py  answer_at_gpt.py  dataset_utils.py  generate_study_notes.py  mp3_to_json.py  practice_offline.py  quiz_offline.py  rawscripts_to_data.py
